	- kk.paragraphs chars fixed?
	- nl.paragraphs chars fixed? (wéér -> weer)
	- pa.paragraphs chars fixed. (removed English word quadrant)
	- ru.paragraphs chars fixed.
	- sr.paragraphs chars fixed. (ascii quotes: " ")
	- uk.paragraphs chars fixed.
	- qwertz_de.kbd chars fixed. (Ä Ö -> ä ö)
	- Crashing? when no <libintl.h> installed on the system and? using 
	  ./configure --disable-nls
	* Added:
	- dvorak_de_adnw.kbd	"Aus der Neue Welt" german keyboard layout
	- dvorak_us_left.kbd	Dvorak left hand layout
	- dvorak_us_rigth.kbd	Dvorak rigth hand layout
	- In fluidity, manages Ctrl+h to work as Backspace (delete -1 char) 
	  and Ctrl+w as Ctrl+Backspace (clean up all errors).

2017-07-02  Felipe Castro (-) <fefcas@gmail.com>; Hodong Kim (=)

	* Release 3.03
	* Fixed:
	- el.paragraphs chars fixed.
	= Counting unicode characters apart for touchs-per-second calculation and
	  also handling IM context. 
	- Gurmukhi keyboard for Jhelum is from Pakistan (kept version for
	  India). Removed extra "bindi" from 'P' key-position.
	- Updated klavaro.appdata.xml file, e.g. added the kudo ModernToolkit.
	- Added GenericName in klavaro.desktop file.
	- Resource leak at translation.c (fh obtained with fopen but had no fclose).
	- Default keyboard for Finnish is [qwerty_se], not [querty_se].
	- Blinking cursor GSource timeout error.
	- Not plotting data for English UK, Español; Castellano and possibly other 
	  languages.
	* Changed:
	- Max number of customizable basic lessons increased to 256.
	- ar.paragraphs updated with some quotes, no more religious or
	  political texts.
	- Allowing the tutor window to shrink more.
	- Using Gurmukhi script to show Punjabi (pa) option in "Language" at main menu
	  window.
	* Added translations:
	= Korean support.
	- Serbian.
	* Updated translations:
	- Arabic.
	- French.

2016-03-17  Felipe Castro (-) <fefcas@gmail.com>;

	* Release 3.02
	* Fixed:
	- Using portable GTK function to access Klavaros's Top 10 URL.
	* Changed: